fixed scrollbar issues

--- a/src/components/ModalProjects.scss
+++ b/src/components/ModalProjects.scss
@@ -174,20 +174,60 @@
 @media only screen and (max-width: 1000px) {
 }
 @media only screen and (max-width: 600px) {
+  .openModal {
+    width: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    transition: 0.7s ease-in-out;
+    opacity: 1;
+  }
   .modalProject {
-    flex-direction: column;
+    flex-direction: column-reverse;
     overflow: auto;
     background: var(--clr-bcg);
     opacity: 1;
+    &::-webkit-scrollbar {
+      width: 8px; /* width of the entire scrollbar */
+    }
+    &::-webkit-scrollbar-track {
+      background: var(--clr-bcgvar); /* color of the tracking area */
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--clr-span1); /* color of the scroll thumb */
+      border-radius: 1px; /* roundness of the scroll thumb */
+      border: 1px solid var(--clr-span1); /* creates padding around scroll thumb */
+    }
     &::before {
       content: none;
     }
-  }
+    &-info {
+      width: 100%;
+      position: relative;
+      padding: 0;
+      &-elements {
+        &-title {
+          margin: 0.5rem;
+        }
+        &-tags {
+          margin: 0.5rem;
+        }
+        &-description {
+          margin: 0.5rem;
+        }
+        &-links {
+          margin: 0.5rem;
+          &-link {
+            margin: 1rem 1rem 1rem 0;
+          }
+        }
+      }
+    }
+    &-imgContainer {
+      width: 100%;
 
-  .openModal {
-    width: 100%;
-    height: 100%;
-    transition: 0.7s ease-in-out;
-    opacity: 1;
+      &-img {
+        border-radius: 0;
+      }
+    }
   }
 }
